# jenkins-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  renovate.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: dev.md
locales/: en-US.ftl  zh-CN.ftl
scripts/: install.sh  retag.sh
scripts/edgeone/: index.html  install.sh
scripts/edgeone/edge-functions/gh/: [[default]].js  index.js
src/: config.rs  constants.rs  env_checks.rs  flow.rs  i18n.rs  interrupts.rs  lib.rs  main.rs  migrations.rs  prompt.rs  spinner.rs  terminal.rs  update.rs  utils.rs
src/jenkins/: client.rs  console_html.rs  cookie.rs  history.rs  mod.rs  presets.rs
src/models/: mod.rs
tests/: test_branch_options.rs  test_config.rs  test_git_branches.rs  test_history.rs  test_i18n.rs  test_jenkins_job_parameter.rs  test_presets.rs  test_version_compare.rs
