[package]
name = "jenkins"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
libc = "0.2.158"
quick-xml = { version = "0.36.1", features = ["serialize"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "default-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
winapi = { version = "0.3.9", features = ["wincon"] }


# for optimize build size
[profile.release]
lto = true
debug = false
opt-level = "z"
panic = "abort"
