[package]
name = "jenkins"
version = "0.1.20"
edition = "2021"
# crates.io
authors = ["Kairyou"]
description = "A CLI tool for triggering Jenkins builds and monitoring job status"
license = "MIT"
repository = "https://github.com/kairyou/jenkins-cli"
keywords = ["jenkins", "ci", "cli", "build"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
anyhow = "1.0.88"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
crossterm = "0.28.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
fluent = "0.16.1"
fluent-langneg = "0.14.1"
indicatif = "0.17.8"
libc = "0.2.158"
once_cell = "1.19.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
rust-embed = "8.5.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sys-locale = "0.3.1"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22"
url = "2.5.2"
winapi = { version = "0.3.9", features = ["wincon"] }

[dev-dependencies]
tempfile = "3.12.0"

[features]
# force_update_check = [] # cargo run --features "force_update_check" --

[profile.dev]
# opt-level = 1

# for optimize build size
[profile.release]
lto = true
debug = false
opt-level = "z"
panic = "abort"
